修改配置